fix contact/demo align issue after merge

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -496,13 +496,13 @@ header nav .nav-search-description {
 
   header nav .nav-sections ul {
     display: flex;
-    justify-content: center;
-    gap: 2em;
+    justify-content: flex-start;
     margin: 0;
     font-size: var(--mt-font-size-90);
     color: var(--mt-global-color-base-primary);
     padding-left: revert;
   }
+
 
   header nav .nav-sections > ul > li > ul {
     display: block;
@@ -524,6 +524,9 @@ header nav .nav-search-description {
     padding-left: 0;
   }
 
+
+
+
   header nav .nav-drop > ul:has(li):has(ul) {
     left: -15em;
   }
@@ -532,6 +535,7 @@ header nav .nav-search-description {
     display: flex !important;
     color: var(--mt-global-color-white);
   }
+
 
   header nav .nav-sections > ul > li[aria-expanded="false"] > ul,
   header nav .nav-sections > ul > li:not([aria-expanded]) > ul {
@@ -572,6 +576,7 @@ header nav .nav-search-description {
     height: initial;
   }
 
+
   header nav .nav-sections .nav-drop,
   header nav .nav-sections .nav-button{
     display: flex;
@@ -606,14 +611,6 @@ header nav .nav-search-description {
     top: unset;
     bottom: .5em;
     transform: rotate(315deg);
-  }
-
-  header nav .nav-sections ul {
-    display: flex;
-    justify-content: center;
-    margin: 0;
-    font-size: var(--mt-font-size-90);
-    color: var(--mt-global-color-base-primary);
   }
 
   header nav .nav-sections > ul > li {
